# BeatMods2-old

./: .gitignore  .gitmodules  .graphqlconfig  BeatMods2.code-workspace  BeatMods2.sql  CMakeLists.txt  CMakeSettings.json  README.md  config.json  stress.sh
BeatMods2/: CMakeLists.txt  api.graphql  gql-api.cmake
BeatMods2/include/: BeatMods2.h
BeatMods2/include/auth/: github.h
BeatMods2/include/db/: engine.h  string_traits.h
BeatMods2/include/logging/: Logging.h
BeatMods2/include/util/: algorithm.h  config.h  http.h  json.h  macro.h  semver.h  thread.h
BeatMods2/src/: BeatMods2.cpp
BeatMods2/src/auth/: github.cpp
BeatMods2/src/db/: engine.cpp
BeatMods2/src/logging/: Logging.cpp
BeatMods2/src/util/: config.cpp  http.cpp  semver.cpp
